--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>dynamodb-streams-kinesis-adapter</artifactId>
     <packaging>jar</packaging>
     <name>DynamoDB Streams Adapter for Java</name>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <description>The DynamoDB Streams Adapter implements the AmazonKinesis interface so that your application can use KCL to consume and process data from a DynamoDB stream.</description>
     <url>https://aws.amazon.com/dynamodb</url>
 
@@ -23,7 +23,8 @@
     </licenses>
 
     <properties>
-        <aws-java-sdk.version>[1.10.5.1, 2.0.0)</aws-java-sdk.version>
+        <aws-java-sdk.version>[1.10.7, 2.0.0)</aws-java-sdk.version>
+        <amazon-kinesis-client.version>[1.6.0, 1.7.0)</amazon-kinesis-client.version>
         <gpg.skip>true</gpg.skip>
     </properties>
 
@@ -35,10 +36,11 @@
             <version>${aws-java-sdk.version}</version>
         </dependency>
 
+        <!-- Amazon Kinesis Client Library -->
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>amazon-kinesis-client</artifactId>
-            <version>1.3.0</version>
+            <version>${amazon-kinesis-client.version}</version>
         </dependency>
 
         <dependency>
@@ -48,15 +50,16 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.3.2</version>
-        </dependency>
-
-        <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.1.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -76,7 +79,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.1</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -131,6 +134,17 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18.1</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Test.java</include>
+                        <include>**/*Tests.java</include>
+                    </includes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
