--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>dynamodb-streams-kinesis-adapter</artifactId>
     <packaging>jar</packaging>
     <name>DynamoDB Streams Adapter for Java</name>
-    <version>1.1.1</version>
+    <version>1.2.0</version>
     <description>The DynamoDB Streams Adapter implements the AmazonKinesis interface so that your application can use KCL to consume and process data from a DynamoDB stream.</description>
     <url>https://aws.amazon.com/dynamodb</url>
 
@@ -23,8 +23,8 @@
     </licenses>
 
     <properties>
-        <aws-java-sdk.version>[1.11.14, 2.0.0)</aws-java-sdk.version>
-        <amazon-kinesis-client.version>[1.6.4, 1.7.0)</amazon-kinesis-client.version>
+        <aws-java-sdk.version>[1.11.115, 2.0.0)</aws-java-sdk.version>
+        <amazon-kinesis-client.version>[1.7.5, 1.8.0)</amazon-kinesis-client.version>
         <gpg.skip>true</gpg.skip>
     </properties>
 
@@ -111,6 +111,10 @@
         <developer>
             <name>Lei Ye</name>
             <email>leiye@amazon.com</email>
+        </developer>
+        <developer>
+            <name>Alexander Patrikalakis</name>
+            <email>amcp@amazon.co.jp</email>
         </developer>
     </developers>
 
