--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>dynamodb-streams-kinesis-adapter</artifactId>
     <packaging>jar</packaging>
     <name>DynamoDB Streams Adapter for Java</name>
-    <version>1.2.1</version>
+    <version>1.2.1-kcl-1.7.3</version>
     <description>The DynamoDB Streams Adapter implements the AmazonKinesis interface so that your application can use KCL to consume and process data from a DynamoDB stream.</description>
     <url>https://aws.amazon.com/dynamodb</url>
 
@@ -23,13 +23,17 @@
     </licenses>
 
     <properties>
-        <aws-java-sdk.version>[1.11.115, 2.0.0)</aws-java-sdk.version>
-        <amazon-kinesis-client.version>[1.7.5, 1.8.0)</amazon-kinesis-client.version>
+        <aws-java-sdk.version>1.11.76</aws-java-sdk.version>
+        <amazon-kinesis-client.version>1.7.3</amazon-kinesis-client.version>
         <powermock.version>1.6.2</powermock.version>
-        <aws.dynamodblocal.version>1.11.86</aws.dynamodblocal.version>
         <maven.dependency.version>3.0.0</maven.dependency.version>
-        <sqlite4java.version>1.0.392</sqlite4java.version>
+        <maven.surefire.version>2.20</maven.surefire.version>
+        <maven.failsafe.version>2.19</maven.failsafe.version>
+        <download.maven.plugin.version>1.3.0</download.maven.plugin.version>
+        <dynamodb-local.port>4567</dynamodb-local.port>
+        <gpg.version>1.6</gpg.version>
         <gpg.skip>true</gpg.skip>
+        <jdk.version>1.7</jdk.version>
     </properties>
 
     <dependencies>
@@ -97,12 +101,6 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>DynamoDBLocal</artifactId>
-            <version>${aws.dynamodblocal.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <developers>
@@ -136,8 +134,8 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
+                        <source>${jdk.version}</source>
+                        <target>${jdk.version}</target>
                         <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
@@ -147,7 +145,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.6</version>
+                <version>${gpg.version}</version>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
@@ -164,56 +162,99 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>${maven.surefire.version}</version>
                 <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                        <include>**/*Tests.java</include>
-                    </includes>
+                    <excludes>
+                        <exclude>**/CorrectnessTest.java</exclude>
+                        <exclude>**/KinesisParametersTest.java</exclude>
+                    </excludes>
                     <argLine>-Dsqlite4java.library.path=${basedir}/target/dependencies</argLine>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>${maven.dependency.version}</version>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
-                            <overWriteReleases>false</overWriteReleases>
-                            <overWriteSnapshots>false</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>integration-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.googlecode.maven-download-plugin</groupId>
+                        <artifactId>download-maven-plugin</artifactId>
+                        <version>${download.maven.plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>install-dynamodb_local</id>
+                                <phase>pre-integration-test</phase>
+                                <goals>
+                                    <goal>wget</goal>
+                                </goals>
+                                <configuration>
+                                    <url>https://s3-us-west-2.amazonaws.com/dynamodb-local/dynamodb_local_latest.zip</url>
+                                    <unpack>true</unpack>
+                                    <outputDirectory>${project.build.directory}/dynamodb</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
 
-    <repositories>
-        <repository>
-            <id>dynamodblocal</id>
-            <name>AWS DynamoDB Local Release Repository</name>
-            <url>https://s3-us-west-2.amazonaws.com/dynamodb-local/release</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.almworks.sqlite4java</groupId>
-                <artifactId>sqlite4java</artifactId>
-                <version>${sqlite4java.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+                    <plugin>
+                        <groupId>com.bazaarvoice.maven.plugins</groupId>
+                        <artifactId>process-exec-maven-plugin</artifactId>
+                        <version>0.4</version>
+                        <executions>
+                            <execution>
+                                <id>dynamodb_local</id>
+                                <phase>pre-integration-test</phase>
+                                <goals>
+                                    <goal>start</goal>
+                                </goals>
+                                <configuration>
+                                    <name>dynamodb_local</name>
+                                    <waitAfterLaunch>2</waitAfterLaunch>
+                                    <arguments>
+                                        <argument>java</argument>
+                                        <argument>-Djava.library.path=dynamodb/DynamoDBLocal_lib</argument>
+                                        <argument>-jar</argument>
+                                        <argument>dynamodb/DynamoDBLocal.jar</argument>
+                                        <argument>-inMemory</argument>
+                                        <argument>-port</argument>
+                                        <argument>${dynamodb-local.port}</argument>
+                                        <argument>-sharedDb</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <!--Stop Process-->
+                            <execution>
+                                <id>stop-jar-process</id>
+                                <phase>post-integration-test</phase>
+                                <goals><goal>stop-all</goal></goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>${maven.failsafe.version}</version>
+                        <executions>
+                            <execution>
+                                <id>default-integration-tests</id>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                                <configuration>
+                                    <includes>
+                                        <include>**/CorrectnessTest.java</include>
+                                        <include>**/KinesisParametersTest.java</include>
+                                    </includes>
+                                    <skip>false</skip>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
