--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>dynamodb-streams-kinesis-adapter</artifactId>
     <packaging>jar</packaging>
     <name>DynamoDB Streams Adapter for Java</name>
-    <version>1.4.0</version>
+    <version>1.5.0</version>
     <description>The DynamoDB Streams Adapter implements the AmazonKinesis interface so that your application can use KCL to consume and process data from a DynamoDB stream.</description>
     <url>https://aws.amazon.com/dynamodb</url>
 
@@ -23,8 +23,8 @@
     </licenses>
 
     <properties>
-        <aws-java-sdk.version>1.11.218</aws-java-sdk.version>
-        <amazon-kinesis-client.version>1.9.0</amazon-kinesis-client.version>
+        <aws-java-sdk.version>1.11.603</aws-java-sdk.version>
+        <amazon-kinesis-client.version>[1.11.0,)</amazon-kinesis-client.version>
         <powermock.version>1.6.2</powermock.version>
         <aws.dynamodblocal.version>1.11.86</aws.dynamodblocal.version>
         <maven.dependency.version>3.0.0</maven.dependency.version>
@@ -39,11 +39,13 @@
             <artifactId>aws-java-sdk-cloudwatch</artifactId>
             <version>${aws-java-sdk.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-dynamodb</artifactId>
             <version>${aws-java-sdk.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-kinesis</artifactId>
@@ -72,8 +74,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.3.2</version>
-            <scope>test</scope>
+            <version>3.7</version>
         </dependency>
 
         <dependency>
