--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>dynamodb-streams-kinesis-adapter</artifactId>
     <packaging>jar</packaging>
     <name>DynamoDB Streams Adapter for Java</name>
-    <version>1.5.0</version>
+    <version>1.5.1</version>
     <description>The DynamoDB Streams Adapter implements the AmazonKinesis interface so that your application can use KCL to consume and process data from a DynamoDB stream.</description>
     <url>https://aws.amazon.com/dynamodb</url>
 
@@ -23,10 +23,10 @@
     </licenses>
 
     <properties>
-        <aws-java-sdk.version>1.11.603</aws-java-sdk.version>
-        <amazon-kinesis-client.version>[1.11.0,)</amazon-kinesis-client.version>
+        <aws-java-sdk.version>1.11.728</aws-java-sdk.version>
+        <amazon-kinesis-client.version>1.13.3</amazon-kinesis-client.version>
         <powermock.version>1.6.2</powermock.version>
-        <aws.dynamodblocal.version>1.11.86</aws.dynamodblocal.version>
+        <aws.dynamodblocal.version>[1.12,2.0)</aws.dynamodblocal.version>
         <maven.dependency.version>3.0.0</maven.dependency.version>
         <sqlite4java.version>1.0.392</sqlite4java.version>
         <gpg.skip>true</gpg.skip>
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.10.3</version>
+            <version>2.6.6</version>
         </dependency>
 
         <dependency>
@@ -114,6 +114,26 @@
     </dependencies>
 
     <developers>
+        <developer>
+            <name>Parijat Sinha</name>
+            <email>parijas@amazon.com</email>
+        </developer>
+        <developer>
+            <name>Shitanshu Aggarwal</name>
+            <email>shitansh@amazon.com</email>
+        </developer>
+        <developer>
+            <name>Abhishek Khanna</name>
+            <email>akkhanna@amazon.com</email>
+        </developer>
+        <developer>
+            <name>Debjyoti Roy</name>
+            <email>debjyotr@amazon.com</email>
+        </developer>
+        <developer>
+            <name>Shantanu Bhoyar</name>
+            <email>shbhoyar@amazon.com</email>
+        </developer>
         <developer>
             <name>Holger Jansohn</name>
             <email>holgs@live.ca</email>
