Add missing lombok dependency

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,13 @@
             <version>${aws.dynamodblocal.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <developers>
